# research-cli

./: .env.example  .gitignore  GEMINI.md  MANUAL.md  README.md  TODO.md  gemini-extension.json  improvements.md  install.sh  package.json  pyproject.toml  research.py  run.py  skills-lock.json
.github/workflows/: release.yml
commands/: research.toml
research_cli/: __init__.py  cli.py  config.py  db.py  exceptions.py  researcher.py  utils.py
skills/gemini-research/: SKILL.md
skills/gemini-research/references/: REFERENCE.md
tests/: conftest.py  fake_server.py  perf_benchmark.py  test_api_key.py  test_async_tasks.py  test_async_thread_wrapper.py  test_base_url_security.py  test_cli.py  test_cli_getattr.py  test_cli_resilience.py  test_client_init_error.py  test_database.py  test_db_oserror.py  test_dotenv_permissions.py  test_dotenv_security.py  test_escape_markup.py  test_fix_console.py  test_get_db.py  test_get_recent_tasks.py  test_get_task.py  test_handle_generate_image.py  test_handle_run.py  test_handle_search.py  test_handle_status.py  test_integration.py  test_output.py  test_permissions.py  test_print_report.py  test_researcher_unit.py  test_run_research_failure.py  test_run_think_failure.py  test_sanitize.py  test_save_binary_util.py  test_save_file_error.py  test_save_report_util.py  test_security_fix.py  test_security_path_traversal.py  test_set_console.py  test_think.py  test_toctou_vulnerability.py  (+5 more)
