[project]
name = "research-cli"
version = "0.1.56.1"
description = "Stateless CLI for Gemini Deep Research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.73.1",
    "python-dotenv>=1.2.1",
    "rich>=15.0.0",
]

[tool.setuptools]
packages = ["research_cli"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
research = "research_cli:main"
think = "research_cli:main"
